# Aerolineas-Rusticas---Rustroopers

./: .gitignore  Cargo.toml  Dockerfile  README.md  airports.json  cert.pem  docker-compose.yml  identity.pfx  key.pem  schema.json  users.json
scripts/: kill_nodes.sh  launch_node_docker.sh  launch_nodes.sh  launch_nodes_docker.sh
src/: lib.rs  main.rs  nodes.rs  simulator.rs
src/errors/: error_types.rs
src/nodes/: node.rs
src/protocol/: mod.rs  protocol_writer.rs
src/protocol/frames_headers/: flags.rs  header.rs  mod.rs  opcode.rs  version.rs
src/protocol/protocol_body/: compression.rs  event_kind.rs  mod.rs  query_flags.rs  result_kind.rs  schema_change.rs  status_node.rs  topology_change.rs
src/protocol/protocol_notations/: bytes_map.rs  consistency.rs  flags_row.rs  mod.rs  result.rs  value.rs  (+1 more)
src/receiver/: message.rs  mod.rs  read_notation.rs  receiver_impl.rs  request_message.rs  response_message.rs  result_response.rs
src/server/: address.rs  application_state.rs  clusteringkey.rs  columntypes.rs  connection.rs  data.rs  endpoint_state.rs  gossip_digest.rs  gossip_message.rs  gossiper.rs  hashring.rs  heartbeat_state.rs  keyspace.rs  log_type.rs  mem_table.rs  mod.rs  node_message.rs  nodes.rs  partitionkey.rs  query_execute.rs  query_simulator.rs  schema.rs  selectquery.rs  sstable.rs  status.rs  tabledefinition.rs  users.rs
src/ui/: flight.rs  lib.rs  local_tiles.rs  map.rs  mod.rs  places.rs  plugins.rs  provider.rs  search_results.rs  windows.rs
tests/: integration_create_keyspace.rs  integration_create_tables.rs  integration_startup.rs
(+13 files in other folders)
